--- a/css/local.css
+++ b/css/local.css
@@ -522,7 +522,7 @@
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
-    
+
     /*overflow-x: hidden;*/
   }
 
@@ -531,7 +531,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
   }
 
   #portfolio .container {
@@ -579,7 +578,6 @@
     font-weight: bold;
     font-size: 6vw;
     color: rgb(32, 32, 32);
-    
   }
 
   #portfolio .description {
@@ -587,7 +585,6 @@
     font-size: 16px;
     line-height: 125%;
     color: rgb(32, 32, 32);
-    
   }
 
   #portfolio .subtitles {
@@ -727,6 +724,7 @@
     */
     border-bottom: none;
     padding-bottom: 0px;
+    padding-top: 0px;
   }
 
   #portfolio .middle-section {
@@ -737,6 +735,7 @@
     */
     border-bottom: none;
     padding-bottom: 0px;
+    padding-top: 0px;
   }
 
   #portfolio .right-section {
@@ -747,6 +746,7 @@
     */
     border-bottom: none;
     padding-bottom: 0px;
+    padding-top: 0px;
   }
 
   #portfolio .title {
@@ -831,8 +831,7 @@
   #pricing .left-section .description {
     width: 100%;
     font-size: 16px;
-    line-height: 125%;   
-  
+    line-height: 125%;
   }
 
   #pricing .right-section {
@@ -1421,4 +1420,3 @@
 
 @media only screen and (min-width: 2000px) {
 }
-
