--- a/css/root.css
+++ b/css/root.css
@@ -1316,3 +1316,33 @@ body {
 #services-main {
   margin: 0 auto;
 }
+
+.transition-2 {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  bottom: 0;
+  z-index: 101;
+  background-color: gray;
+  transition: 0.3s ease-out;
+}
+
+.transition-2.is-active {
+  left: 0px;
+}
+
+.transition-3 {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  bottom: 0;
+  z-index: 101;
+  background-color: gray;
+  transition: 0.2s ease-out;
+}
+
+.transition-3.is-active {
+  right: 0px;
+}
