--- a/css/root.css
+++ b/css/root.css
@@ -544,6 +544,34 @@ body {
     display: none;
   }
 
+  .navbar-overlay-animation {
+    position: fixed;
+    width: 100%;
+    left: 100%;
+    height: 81px;
+    background-color: white;
+    z-index: 100;
+    transition: 1.2s;
+  }
+
+  .navbar-overlay-animation.is-active {
+    left: 0px;
+  }
+
+  .navbar-overlay-animation2 {
+    position: fixed;
+    width: 100%;
+    right: 100%;
+    height: 81px;
+    background-color: #f1f1f1;
+    z-index: 100;
+    transition: 1.2s;
+  }
+
+  .navbar-overlay-animation2.is-active {
+    right: 0px;
+  }
+
   /* Effect 5: same word slide in */
   .cl-effect-5 a {
     overflow: hidden;
