--- a/css/local.css
+++ b/css/local.css
@@ -1376,7 +1376,7 @@
   }
 
   #blog .container {
-    width: 95%;
+    width: 85%;
     display: flex;
     flex-direction: row; /* make main axis vertical */
     justify-content: space-between; /* center items vertically, in this case */
@@ -1384,29 +1384,41 @@
   }
 
   #blog .container a:hover {
-    filter: invert(44%) sepia(91%) saturate(2152%) hue-rotate(13deg)
-      brightness(108%) contrast(102%);
+    /*filter: invert(44%) sepia(91%) saturate(2152%) hue-rotate(13deg)
+      brightness(108%) contrast(102%);*/
+    border-radius: 5px;
+    background-color: #ee8d1e;
   }
 
   #blog .blog-element {
     width: 29%;
     height: 45%;
-    border: 1px solid #a9a9a9;
+    border: 1px solid #e8e8e8;
     margin-bottom: 2%;
     text-decoration: none;
     color: black;
     padding: 20px;
     position: relative;
+    background-color: white;
+    border-radius: 30px 60px;
+    transition: 0.3s ease-in-out;
   }
 
   #blog .blog-element .blog-date {
-    font-size: 16px;
-    width: 70%;
+    font-size: 18px;
+    width: fit-content;
     padding-bottom: 20px;
     position: relative;
+    background-color: rgb(239, 239, 239);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 2px;
   }
 
   #blog .blog-element .blog-header {
+    padding-top: 20px;
     font-size: 2vw;
     font-weight: bold;
     width: 70%;
@@ -1428,6 +1440,7 @@
     align-items: center;
     justify-content: center;
     display: initial;
+    padding-top: 28px;
   }
 
   #blog .blog-element .blog-link img {
