Added remaining blog web pages and new css

--- a/css/root.css
+++ b/css/root.css
@@ -813,7 +813,9 @@ body {
 
   #footer .header {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
+    padding-bottom: 30px;
+    color: #f18200;
   }
 
   #footer .left-section {
@@ -861,9 +863,25 @@ body {
 
   #footer .right-section p {
     width: 95%;
-    margin-bottom: 125px;
-    font-size: 18px;
+    margin-bottom: 25px;
+    font-size: min(16px, 2.5vw);
     display: initial;
+  }
+
+  #footer .right-section label {
+    font-weight: bold;
+    font-size: min(18px, 2vw);
+  }
+
+  #footer .right-section input {
+    width: 60%;
+    padding: 10px;
+    /*background: transparent;*/
+    border-radius: 25px;
+    border: 0;
+    outline: 0;
+    font-size: 16px;
+    margin-top: 25px;
   }
 
   #footer .right-section .footer-services {
@@ -957,6 +975,52 @@ body {
     color: #939393;
     padding-left: 10px;
     font-size: 16px;
+  }
+
+  .cl-effect-5-footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: -30px;
+  }
+
+  /* Effect 5: same word slide in */
+  .cl-effect-5-footer a {
+    overflow: hidden;
+    font-size: 36px;
+    height: 1em;
+    width: fit-content;
+    margin-top: 20px;
+    color: black;
+    font-weight: bold;
+  }
+
+  .cl-effect-5-footer a:hover {
+    color: rgb(48, 86, 197);
+  }
+
+  .cl-effect-5-footer a span {
+    position: relative;
+    display: inline-block;
+    -webkit-transition: -webkit-transform 0.3s;
+    -moz-transition: -moz-transform 0.3s;
+    transition: transform 0.3s;
+  }
+
+  .cl-effect-5-footer a span::before {
+    position: absolute;
+    top: -100%;
+    content: attr(data-hover);
+    font-weight: 700;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  .cl-effect-5-footer a:hover span,
+  .cl-effect-5-footer a:focus span {
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    transform: translateY(100%);
   }
 }
 
