--- a/css/local.css
+++ b/css/local.css
@@ -1281,7 +1281,7 @@
 
   #blog {
     width: 100%;
-    height: 45vh;
+    height: 55vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1290,7 +1290,7 @@
   }
 
   #blog .container {
-    width: 95%;
+    width: 85%;
     display: flex;
     flex-direction: row; /* make main axis vertical */
     justify-content: space-between; /* center items vertically, in this case */
@@ -1298,37 +1298,49 @@
   }
 
   #blog .container a:hover {
-    filter: invert(44%) sepia(91%) saturate(2152%) hue-rotate(13deg)
-      brightness(108%) contrast(102%);
+    /*filter: invert(44%) sepia(91%) saturate(2152%) hue-rotate(13deg)
+      brightness(108%) contrast(102%);*/
+    border-radius: 5px;
+    background-color: #ee8d1e;
   }
 
   #blog .blog-element {
-    width: 26%;
+    width: 28%;
     height: 45%;
-    border: 1px solid #a9a9a9;
+    border: 1px solid #e8e8e8;
     margin-bottom: 2%;
     text-decoration: none;
     color: black;
-    padding: 10px;
+    padding: 15px;
     position: relative;
+    background-color: white;
+    border-radius: 30px 60px;
+    transition: 0.3s ease-in-out;
   }
 
   #blog .blog-element .blog-date {
     font-size: 14px;
-    width: 70%;
+    width: fit-content;
     padding-bottom: 20px;
     position: relative;
+    background-color: rgb(239, 239, 239);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 2px;
   }
 
   #blog .blog-element .blog-header {
-    font-size: 2vw;
+    padding-top: 20px;
+    font-size: 1.7vw;
     font-weight: bold;
     width: 70%;
   }
 
   #blog .blog-element .blog-link {
     font-size: 16px;
-    width: 95%;
+    width: 90%;
     position: absolute;
     bottom: 0;
     text-align: right;
@@ -1337,16 +1349,17 @@
   }
 
   #blog .blog-element .blog-link .blog-link-text {
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
     display: initial;
+    padding-top: 18px;
   }
 
   #blog .blog-element .blog-link img {
-    margin-top: 7px;
-    width: 13%;
+    margin-top: 11px;
+    width: 15%;
   }
 }
 
@@ -1391,7 +1404,7 @@
   }
 
   #blog .blog-element {
-    width: 29%;
+    width: 28%;
     height: 45%;
     border: 1px solid #e8e8e8;
     margin-bottom: 2%;
