--- a/css/contact.css
+++ b/css/contact.css
@@ -30,9 +30,9 @@
     width: 100%;
     height: 35vh;
     /*
-        background-color: rgb(223, 223, 253);
-        border: 1px dashed;
-        */
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
@@ -42,15 +42,15 @@
     width: 95%;
     height: 30vh;
     /*background-color: rgb(204, 204, 252);
-        border: 1px dashed;
-        */
+    border: 1px dashed;
+    */
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
   }
 
   #hero .left-section-mobile .hero-header {
-    font-size: 8.5vw;
+    font-size: 9.5vw;
     /*font-size: 35px;*/
     line-height: 95%;
     font-weight: bold;
@@ -59,6 +59,7 @@
   #hero .left-section-mobile p {
     font-size: 16px;
     line-height: 125%;
+    width: 90%;
   }
 
   #hero .left-section {
@@ -87,7 +88,7 @@
   }
 
   #hero .container {
-    width: 85%;
+    width: 95%;
     display: flex;
     flex-direction: row;
   }
@@ -95,9 +96,9 @@
     width: 55%;
     height: 50vh;
     /*
-        background-color: rgb(223, 223, 253);
-        border: 1px dashed;
-        */
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
@@ -107,8 +108,8 @@
     width: 45%;
     height: 50vh;
     /*background-color: rgb(204, 204, 252);
-        border: 1px dashed;
-        */
+    border: 1px dashed;
+    */
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
@@ -159,83 +160,64 @@
   #hero .container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 85%;
+    width: 1400px;
+    margin-left: 27px;
+    margin-right: 27px;
   }
 
   #hero .left-section {
-    width: 35%;
+    width: 55%;
     height: 70vh;
     /*
-        background-color: rgb(223, 223, 253);
-        border: 1px dashed;
-        */
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
-    justify-content: start; /* center items vertically, in this case */
-    padding-top: 35px;
-  }
-
-  #hero .left-section .header {
-    font-weight: bold;
-    font-size: 36px;
-  }
-
-  #hero .left-section p {
-    font-size: 30px;
+    justify-content: center; /* center items vertically, in this case */
   }
 
   #hero .right-section {
-    width: 60%;
+    width: 45%;
     height: 70vh;
     /*background-color: rgb(204, 204, 252);
-        border: 1px dashed;
-        */
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
     padding-top: 35px;
   }
 
-  #hero .right-section .container {
-    width: 100%;
-    height: 70vh;
-    /*background-color: rgb(204, 204, 252);
-        border: 1px dashed;
-        */
-    background-color: #cfcfcf;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding: 30px;
-    border: 1px solid #cfcfcf;
-  }
-
-  #hero .right-section .container .header {
-    font-size: 30px;
-    font-weight: bold;
-  }
-
-  #hero .right-section .container textarea {
-    font-family: "HelveticaNeue", sans-serif;
-    font-size: 18px;
-    width: 100%;
-    height: 150px;
-    border: 1px solid #bfbfbf;
-  }
-
-  #hero .right-section .container input {
-    width: 50%;
-  }
-
-  #hero .left-section .hero-header {
+  .hero-header {
     font-size: 4.5vw;
     /*font-size: 75px;*/
     line-height: 95%;
     font-weight: bold;
+    position: relative;
+    transition: 0.5s ease-out;
+    top: 0px;
+    opacity: 1;
   }
 
-  #hero .left-section p {
+  #hero .hero-animation {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .hero-transition {
+    top: 80% !important;
+    opacity: 0;
+  }
+
+  #hero p {
     font-size: 20px;
     line-height: 125%;
     width: 80%;
+    transition: 0.5s ease-in-out;
+    position: relative;
+    top: 0px;
+    margin: 0px;
   }
 
   #hero .left-section-mobile {
