--- a/css/local.css
+++ b/css/local.css
@@ -730,7 +730,7 @@
     width: 95%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     gap: 2vw;
   }
 
@@ -770,7 +770,7 @@
   #portfolio .title {
     padding-bottom: 20px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 22px;
   }
 
   #portfolio .description {
@@ -779,7 +779,7 @@
   }
 
   #portfolio .subtitles {
-    font-size: 12px;
+    font-size: 14px;
     padding-bottom: 30px;
   }
 
@@ -790,6 +790,35 @@
   #portfolio a {
     text-decoration: none;
     color: black;
+  }
+
+  #portfolio a:hover .title {
+    color: #f18200;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
+
+  #portfolio .hover-container {
+    position: relative;
+  }
+
+  #portfolio .overlay-hover {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #008cba;
+    overflow: hidden;
+    width: 0%;
+    height: 100%;
+    transition: 0.5s ease;
+  }
+
+  #portfolio a:hover .overlay-hover {
+    width: 100%;
   }
 }
 
