--- a/css/local.css
+++ b/css/local.css
@@ -701,6 +701,23 @@
     text-decoration: none;
     color: black;
   }
+
+  #portfolio a:hover .title {
+    color: #f18200;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
+
+  #portfolio .hover-container {
+    position: relative;
+  }
+
+  #portfolio .overlay-hover {
+    display: none;
+  }
 }
 
 /* -- Tablets -- */
@@ -730,7 +747,7 @@
     width: 95%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     gap: 2vw;
   }
 
@@ -806,6 +823,7 @@
   }
 
   #portfolio .overlay-hover {
+    display: initial;
     position: absolute;
     bottom: 0;
     left: 0;
