--- a/css/root.css
+++ b/css/root.css
@@ -229,6 +229,34 @@ body {
     color: white;
     cursor: pointer;
   }
+
+  .navbar-overlay-animation {
+    position: fixed;
+    width: 100%;
+    left: 100%;
+    height: 81px;
+    background-color: white;
+    z-index: 100;
+    transition: 1.2s;
+  }
+
+  .navbar-overlay-animation.is-active {
+    left: 0px;
+  }
+
+  .navbar-overlay-animation2 {
+    position: fixed;
+    width: 100%;
+    right: 100%;
+    height: 81px;
+    background-color: #f1f1f1;
+    z-index: 100;
+    transition: 1.2s;
+  }
+
+  .navbar-overlay-animation2.is-active {
+    right: 0px;
+  }
 }
 
 /* -- Ipad Pro -- */
