--- a/css/root.css
+++ b/css/root.css
@@ -140,13 +140,14 @@ body {
   }
 
   .navbar-menu-mobile img {
-    width: 40px;
+    width: 35px;
     padding-top: 24px;
   }
 
   .navbar-menu-mobile .link {
-    padding-top: 31px;
+    padding-top: 35px;
     padding-right: 8px;
+    display: none;
   }
 
   .overlay {
@@ -166,7 +167,7 @@ body {
 
   .overlay-content {
     position: relative;
-    width: 95%;
+    width: 90%;
   }
 
   .overlay-content .overlay-nav {
@@ -187,18 +188,18 @@ body {
 
   .overlay a {
     text-decoration: none;
-    color: rgb(212, 212, 212);
+    color: white;
     font-weight: bold;
     font-size: 18px;
     display: block;
   }
 
   .overlay .overlay-links a {
-    color: rgb(199, 199, 199);
+    color: white;
   }
 
   .overlay a:hover {
-    color: rgb(255, 255, 255);
+    color: white;
   }
 
   .overlay-content .overlay-links h1 {
@@ -218,6 +219,25 @@ body {
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   }
 
+  .overlay .overlay-links .link-email {
+    font-size: 18px;
+    padding-left: 0px;
+    margin: 0;
+    padding-top: 50px;
+    display: block;
+    transform: translate(0, 100%);
+    transition-duration: 1.25s;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+    display: flex;
+    align-items: center;
+  }
+
+  .overlay .link-email img {
+    width: 30px;
+    height: 30px;
+    padding-left: 10px;
+  }
+
   .overlay .closebtn:hover,
   .overlay .closebtn:focus {
     color: #f1f1f1;
@@ -225,7 +245,8 @@ body {
   }
 
   .overlay .closebtn {
-    font-size: 60px;
+    font-size: 50px;
+    padding-right: 10px;
     color: white;
     cursor: pointer;
   }
@@ -326,6 +347,7 @@ body {
   .navbar-menu-mobile .link {
     padding-top: 31px;
     padding-right: 8px;
+    display: initial;
   }
 
   .overlay {
@@ -366,14 +388,14 @@ body {
 
   .overlay a {
     text-decoration: none;
-    color: rgb(212, 212, 212);
+    color: white;
     font-weight: bold;
     font-size: 18px;
     display: block;
   }
 
   .overlay .overlay-links a {
-    color: rgb(199, 199, 199);
+    color: white;
   }
 
   .overlay a:hover {
@@ -691,7 +713,7 @@ body {
     flex-direction: row;
     justify-content: center;
     padding-top: 40px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     background-image: url("/images/Vector3.svg");
     background-size: 400px;
     background-repeat: no-repeat;
@@ -859,6 +881,8 @@ body {
     justify-content: center;
     background-color: #353535;
     color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .socials .container {
